# petalsync

./: .gitignore  Dockerfile  README.md  docker-compose.yml  horTime.py  init-mongo.js  pyproject.toml  requirements.txt  serviceShETL.py  servicerunETL.py  supervisord.conf
app/: README.md  package-lock.json  package.json
app/src/: App.vue  main.js
app/src/assets/: main.css
app/src/components/: Navbar.vue  Projetos.vue  TableLog.vue  Teste.vue
app/src/router/: index.js
app/src/views/: Home.vue  Log.vue
config/: dbConfig.py
convutell/: Untitled-1  app.py  etl.py  manager.py
convutell/api/controller/: deleteall.py
convutell/api/model/: db.py
convutell/api/schemas/: schemas.py
convutell/config/: dbConfig.py
convutell/manager/: manager.py  managerteste.py
convutell/model/: db.py
convutell/templates/: index.html
convutell/views/log/: log.py
data/: .bash_history  WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--2558785333555362894.wt  collection-2--2558785333555362894.wt  collection-7--2558785333555362894.wt  index-1--2558785333555362894.wt  index-3--2558785333555362894.wt  index-8--2558785333555362894.wt  index-9--2558785333555362894.wt  sizeStorer.wt
data/diagnostic.data/: metrics.2023-10-01T12-46-26Z-00000  metrics.2023-10-01T12-46-29Z-00000  metrics.2023-10-01T12-55-40Z-00000
model/: db.py
petalsync/: __init__.py  etl.py  main.py
schemas/: schemas.py
views/connection/: connection.py
views/ds_type_query/: _type.py
views/log/: log.py
views/project/: project.py
views/query/: query.py
views/time/: time.py
(+24 files in other folders)
