[tool.poetry]
name = "autconvutell"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.95.1"
Mako = ">=1.2.4"
MarkupSafe = ">=2.1.0"
mongoengine = ">=0.27.0"
mysql-connector = ">=2.2.9"
mysql-connector-python = ">=8.0.33"
mysql-connector-python-rf = ">=2.2.2"
pydantic = "1.10.7"
pymongo = ">=4.3.3"
SQLAlchemy = ">=2.0.10"
uvicorn = ">=0.15.0"
python-dotenv = ">=1.0.0"

# flask
blinker = "1.6.2"
blueprint = "3.4.2"
certifi = "2023.7.22"
charset-normalizer = "3.3.0"
click = "8.1.7"
Flask = "3.0.0"
idna = "3.4"
itsdangerous = "2.1.2"
Jinja2 = "3.1.2"
python-decouple = "3.8"
requests = "2.31.0"
urllib3 = "2.0.5"
Werkzeug = "3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
